# fmilib-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml  upload.yml
cmake/: FindFMILIB.cmake  config.cmake.in  project-config.cmake.in
examples/: CMakeLists.txt  buffered_slave_example.cpp  fmi_test.cpp  slave_example.cpp
include/fmilibcpp/: buffered_slave.hpp  fixed_range_random_generator.hpp  fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp  temp_dir.hpp
include/fmilibcpp/util/: fs_portability.hpp  temp_dir.hpp
src/: CMakeLists.txt
src/fmilibcpp/: fmicontext.hpp  fmu.cpp
src/fmilibcpp/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/fmilibcpp/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/fmilibcpp/util/: fixed_range_random_generator.hpp  temp_dir.hpp  uuid.cpp  uuid.hpp
tests/: CMakeLists.txt  test_buffered_identity.cpp  test_controlled_temp.cpp  test_identity.cpp
